:bulb: Add missing routes to swagger
